Fix control-panel on Safari

--- a/src/css/control-panel.styl
+++ b/src/css/control-panel.styl
@@ -102,5 +102,6 @@ body.fullscreen
 
 @supports (backdrop-filter: none)
     #control-panel
-        background rgba(100%, 100%, 100%, .6)
-        backdrop-filter brightness(1.5) blur(40px)
+        .panel
+            background rgba(255, 255, 255, .8)
+            backdrop-filter brightness(1.5) blur(40px)
